--- a/TwitterMap/TwitterMap/templates/googlemap_markers_realtime.html
+++ b/TwitterMap/TwitterMap/templates/googlemap_markers_realtime.html
@@ -35,8 +35,9 @@
       }
 
       function eqfeed_callback(results) {
-          $.get("http://54.147.97.66:5000/start_workers")
-          $.get("http://54.147.97.66:5000/start_streaming")
+//          $.get("http://54.147.97.66:5000/start_workers")
+          $.get("http://54.147.97.66:5000/start_streaming/"+document.getElementById('keyword').innerText)
+          console.log("http://54.147.97.66:5000/start_streaming/"+document.getElementById('keyword').innerText);
 
         $(document).ready(function() {
           socket = io.connect('http://' + document.domain + ':' + location.port);
