--- a/TwitterMap/TwitterMap/templates/googlemap_markers_realtime.html
+++ b/TwitterMap/TwitterMap/templates/googlemap_markers_realtime.html
@@ -36,7 +36,7 @@
       function eqfeed_callback(results) {
           $.get("http://54.147.97.66:5000/start_workers")
           $.get("http://54.197.212.102:5000/start_streaming/"+document.getElementById('keyword').innerText)
-          console.log("http://54.197.212.102:5000/start_workers/"+document.getElementById('keyword').innerText);
+          console.log("http://54.197.212.102:5000/start_workers/");
           console.log("http://54.197.212.102:5000/start_streaming/"+document.getElementById('keyword').innerText);
         $(document).ready(function() {
           socket = io.connect('http://' + document.domain + ':' + location.port);
