--- a/TwitterMap/TwitterMap/templates/googlemap_markers_realtime.html
+++ b/TwitterMap/TwitterMap/templates/googlemap_markers_realtime.html
@@ -43,7 +43,7 @@
           console.log("connected to " + 'http://' + document.domain + ':' + location.port + " via socket")
           socket.on('real_tweets', function(message) {
             console.log("received new tweets!");
-            console.log(message);
+            console.log(JSON.parse(message));
             var icons = {
               neg: {
                 url: 'http://maps.google.com/mapfiles/kml/pal4/icon52.png'
